fix: collapse transitions on alert listings and back button on new alert form

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -59,6 +59,16 @@
   padding-bottom: 36px;
 }
 
+.collapse:not(.show) {
+    display: none;
+}
+.collapsing {
+  $transition-collapse: height .25s ease;
+  height: 0;
+  overflow: hidden;
+  @include transition($transition-collapse);
+}
+
 .listings .card {
   background-color: white;
   border: 1px solid #eee;
